--- a/css/newMetro.css
+++ b/css/newMetro.css
@@ -54,6 +54,208 @@ nav {
     padding: 0.6rem 0.6rem 0.5rem 0.6rem;
 }
 
+/*  MAIN SECTION  */
+
+
+main{
+  display: flex;
+  justify-content: space-between; 
+  margin-top: 50px;
+}
+.whole-section{
+  width: 80%;
+}
+  .span3-name{
+    font-style: italic;
+   
+}
+.span3-div4{
+    font-weight: bold;
+}
+    
+.span4-div{
+    height: 100%;
+    background-size: cover;
+    height: max-content;
+
+}
+a{
+    text-decoration: none;
+    color: #000;
+}       
+.head{
+    width: 100%;
+    text-align: center;
+    font-size: 25px;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+.head h2{
+    border-bottom: 1px solid rgb(224, 213, 213);
+    line-height: 0.1em;
+    margin: 10px 20px;
+   
+}
+.head h2 span{
+    background: #fff;
+    padding: 0 30px;
+}
+.first-section{
+   display: flex;
+   justify-content: space-between; 
+}
+
+.sub-first-section{
+    padding-right: 25px;
+   
+}
+.sub-second-section{   
+    padding-left: 25px;
+    border-left: 1px solid rgb(224, 213, 213);
+    padding-right: 25px;
+    border-right: 1px solid rgb(224, 213, 213);
+}
+.sub-third-section{
+    padding-left: 25px;
+  
+
+}
+.span3-all{
+padding-bottom: 10px;
+}
+.span3-div4{
+    padding-bottom: 10px;
+}
+
+/*2nd section*/
+
+.sub-sec-div img{
+    height: 200px;
+    width: 250px;
+}
+.section-wrapper-content{
+display: flex;
+justify-content: space-between;
+gap: 10px;
+padding-top: 2rem;
+}
+.section2-wrapper-content{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    padding-bottom: 50px;
+}
+
+/*third section*/
+
+
+
+
+.title-wrapper img{
+    height: 200px;
+    width: 250px;
+}
+.third-section-wrapper-content{
+display: flex;
+justify-content: space-between;
+gap: 10px;
+padding-top: 2rem;
+}
+.third-section2-wrapper-content{
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    padding-bottom: 50px;
+}
+
+
+/*button section*/
+
+
+#red{
+    background-color: rgb(204, 19, 19);
+    padding: 10px;
+    height: 45px;
+    margin: 2px;
+    border: 0;
+    border-radius: 5px;
+    font-size: 17px;
+}
+#red :hover{
+    background-color: rgb(204, 19, 19);
+    padding: 10px;
+    height: 45px;
+    margin: 2px;
+    border: 0;
+    border-radius: 5px;
+    font-size: 17px;
+}
+#red a{
+    padding: 15px;
+    height: 45px;  
+}
+
+.btn{
+    background-color: rgb(241, 237, 237);
+    padding: 10px;
+    height: 45px;
+    margin: 2px;
+    border: 0;
+    border-radius: 5px;
+    font-size: 17px;
+}
+
+.btn :hover{
+    background-color: rgb(98, 122, 143);
+    padding: 15px;
+    height: 45px;
+    margin: 2px;
+    border: 0;
+    border-radius: 5px;
+    font-size: 17px;
+}
+.btn a{
+    padding: 15px;
+    height: 45px;   
+}
+
+.advert{
+  width: 20%;
+ 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+.advert-div p{
+margin-bottom: 100px;
+}
+.advert-div p img{
+margin-left: 40px;
+  width: 90%;
+  height: 400px;
+}
+.side-ad{
+  text-align: center;
+  font-size: 10px;
+  font-style: italic;
+}
+
+.ad-name{
+  text-align: center;
+  font-style: italic;
+  font-size: 10px;
+}
+#middle-ad{
+  text-align: center;
+  font-style: italic;
+  font-size: 13px;
+}
+.middle-ad-name img{
+  width: 80%;
+  height: 200px;
+ padding-bottom: 40px;
+} 
 
 
 
