--- a/css/metro.css
+++ b/css/metro.css
@@ -1,168 +1,193 @@
-@import url('https://fonts.googleapis.com/css2?family=Fugaz+One&family=Monoton&display=swap');
-*{
-    margin-right: 6px;
-    margin-left: 3px;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
-
+@import url("https://fonts.googleapis.com/css2?family=Fugaz+One&family=Monoton&display=swap");
+* {
+  margin-right: 6px;
+  margin-left: 3px;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
 /* //HEADER SECTION// */
 
 header {
-    background: #2bb7da;
+  margin-right: 0;
+  margin-left: 0;
+  background: linear-gradient(to right, #2bb7da, #31d35c);
 }
 nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 1.2rem;
 }
-.header-logo h3, .footer-logo h3 {
-    color: white;
+
+.header-logo h3,
+.footer-logo h3 {
+  color: white;
+  font-size: 1.3rem;
 }
 .header-logo h3 {
-    margin-left: 1rem;
+  margin-left: 1rem;
+}
+.header-logo span,
+.footer-logo span {
+  color: lawngreen;
+  font-size: 1.4rem;
 }
 .nav-toggle {
-    display: none;
+  display: none;
 }
 .nav-checkbox {
-    display: none;
+  display: none;
 }
 .nav-menu {
-    display: flex;
-    list-style: none;
+  display: flex;
+  list-style: none;
 }
 .nav-menu li:not(:last-child) {
-    margin-right: 1.5rem;
+  margin-right: 1.5rem;
 }
 .nav-menu li a,
 .nav-call-to-action a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
+}
+/* hover styles for the nav-link */
+.nav-link {
+  position: relative;
+}
+.nav-link:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  display: block;
+  height: 5px;
+  background: black;
+  left: 0;
+  right: 0;
+  bottom: -1.4625rem;
+  opacity: 0;
+}
+.nav-link:hover {
+  color: black;
+}
+.nav-link:hover::before {
+  opacity: 0.75;
 }
 .nav-call-to-action {
-    margin-right: 2rem;
+  margin-right: 2rem;
 }
 .nav-call-to-action a {
-    border: 2px solid white;
-    border-radius: 5px;
+  border: 2px solid white;
+  border-radius: 5px;
 }
 .nav-call-to-action a:first-child {
-    padding: 0.5rem 0.5rem;
-    margin-right: 0.2rem;
+  padding: 0.5rem 0.5rem;
+  margin-right: 0.2rem;
 }
 .nav-call-to-action a:last-child {
-    padding: 0.6rem 0.6rem 0.5rem 0.6rem;
+  padding: 0.6rem 0.6rem 0.5rem 0.6rem;
 }
 
 /* //MAIN SECTION// */
 /* Add CSS for main section here */
 
- main{
+main {
   display: flex;
-   justify-content: space-between; 
-   gap: 15px;
+  justify-content: space-between;
+  gap: 15px;
   margin-top: 50px;
- 
 }
-.main-whole-section{
+.main-whole-section {
   width: 80%;
-} 
-.advertisement-section{
+}
+.advertisement-section {
   width: 20%;
 }
 
-a{
+a {
   text-decoration: none;
   color: #000;
-}       
-.head{
+}
+.head {
   width: 90%;
   text-align: center;
   font-size: 25px;
   margin-top: 50px;
   margin-bottom: 50px;
 }
-.head h2{
+.head h2 {
   border-bottom: 1px solid rgb(224, 213, 213);
   line-height: 0.1em;
   margin: 10px 20px;
- 
 }
-.head h2 span{
+.head h2 span {
   background: #fff;
   padding: 0 30px;
 }
 
 /*first section*/
 
-
-.first-section{
- display: flex;
-/* justify-content: space-between; */
- padding-bottom: 70px;
+.first-section {
+  display: flex;
+  /* justify-content: space-between; */
+  padding-bottom: 70px;
 }
 
 /*.sub-first-section{
   padding-right: 25px;
   border-right: 1px solid rgb(224, 213, 213);
 }*/
-.sub-first-section{
+.sub-first-section {
   width: 25%;
 }
-#section-a{
+#section-a {
   padding-bottom: 20px;
 }
-#section-b{
+#section-b {
   padding-top: 10px;
 }
-.sub-second-section{
-  width: 45%;   
+.sub-second-section {
+  width: 45%;
   padding-left: 25px;
   border-left: 1px solid rgb(224, 213, 213);
   padding-right: 25px;
   border-right: 1px solid rgb(224, 213, 213);
-  
 }
-.sub-third-section{
+.sub-third-section {
   width: 30%;
   text-align: start;
-
 }
 
-.span3-name{
+.span3-name {
   font-style: italic;
 }
-.span3-name span{
+.span3-name span {
   padding-left: 30px;
 }
-.span3-all{
-padding-bottom: 30px;
-padding-top: 10px;
+.span3-all {
+  padding-bottom: 30px;
+  padding-top: 10px;
 }
-.span3-div4{
+.span3-div4 {
   padding-bottom: 10px;
   font-weight: bold;
   text-align: center;
-  
 }
-
 
 /*second section*/
 
-.sub-sec-div img{
+.sub-sec-div img {
   height: 200px;
   width: 250px;
 }
-.section-wrapper-content{
-display: flex;
-justify-content: space-between;
-gap: 10px;
-padding-top: 30px;
-padding-bottom: 30px;
+.section-wrapper-content {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  padding-top: 30px;
+  padding-bottom: 30px;
 }
-.section2-wrapper-content{
+.section2-wrapper-content {
   display: flex;
   justify-content: space-between;
   gap: 10px;
@@ -170,40 +195,37 @@ padding-bottom: 30px;
   /* padding-bottom: 200px; */
 
   padding-bottom: 80px;
- 
 }
 
 /*third section*/
- .title-wrapper img{
+.title-wrapper img {
   height: 200px;
   width: 250px;
 }
-.third-section-wrapper-content{
-display: flex;
-justify-content: space-between;
-gap: 10px;
-padding-top: 30px;
-padding-bottom: 30px;
-}
-.third-section2-wrapper-content{
+.third-section-wrapper-content {
   display: flex;
   justify-content: space-between;
-  gap: 10px; 
-/* 
+  gap: 10px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.third-section2-wrapper-content {
+  display: flex;
+  justify-content: space-between;
+  gap: 10px;
+  /* 
   padding-bottom: 200px;
 
   padding-bottom: 80px;
  */
 }
 
-
 /* fourth section
 code for the third section*/
 
 /*button section*/
 
-
- #red{
+#red {
   background-color: rgb(204, 19, 19);
   padding: 10px;
   height: 45px;
@@ -212,7 +234,7 @@ code for the third section*/
   border-radius: 5px;
   font-size: 17px;
 }
-#red :hover{
+#red :hover {
   background-color: rgb(204, 19, 19);
   padding: 10px;
   height: 45px;
@@ -221,12 +243,12 @@ code for the third section*/
   border-radius: 5px;
   font-size: 17px;
 }
-#red a{
+#red a {
   padding: 15px;
-  height: 45px;  
+  height: 45px;
 }
 
-.btn{
+.btn {
   background-color: rgb(241, 237, 237);
   padding: 10px;
   height: 45px;
@@ -236,7 +258,7 @@ code for the third section*/
   font-size: 17px;
 }
 
-.btn :hover{
+.btn :hover {
   background-color: rgb(98, 122, 143);
   padding: 15px;
   height: 45px;
@@ -245,11 +267,11 @@ code for the third section*/
   border-radius: 5px;
   font-size: 17px;
 }
-.btn a{
+.btn a {
   padding: 15px;
-  height: 45px;   
+  height: 45px;
 }
-.advert{
+.advert {
   width: 20%;
   /* margin-right: 10px;
   margin-left: 10px; */
@@ -258,271 +280,356 @@ code for the third section*/
   justify-content: space-between;
   align-items: center;
 }
-.advert-div p{
-margin-bottom: 100px;
+.advert-div p {
+  margin-bottom: 100px;
 }
-.advert-div p img{
-
+.advert-div p img {
   width: 150px;
   height: 400px;
 }
 
-.ad-name{
+.ad-name {
   text-align: center;
   font-style: italic;
   font-size: 10px;
 }
-#middle-ad{
+#middle-ad {
   text-align: center;
   font-style: italic;
   font-size: 13px;
 }
-.middle-ad-name img{
+.middle-ad-name img {
   width: 80%;
   height: 200px;
- padding-bottom: 40px;
-} 
+  padding-bottom: 40px;
+}
 
- 
-/* //FOOTER// */
+/* //FOOTER SECTION// */
 
 footer {
-  background-color: #2bb7da;
-  margin-top: 2rem;
+  background-color: black;
   padding-top: 1rem;
 }
-.container {
-  width: 95%;
-  max-width: 1100px;
-  margin: 0 auto;
-}
+
 .footer-top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: 1.5rem;
 }
-.footer-call-to-action a {
-    display: inline-block;
-    text-decoration: none;
-    background-color: white;
-    color: #2bb7da;
-    border: 2px solid white;
-    border-radius: 5px;
-    padding: 1rem 1.2rem 0.4rem 1.2rem;
+
+.footer-form {
+  display: flex;
+  width: 35%;
+  justify-content: space-between;
 }
-.footer-call-to-action {
-    display: flex;
-    margin-right: 2rem;
+.form-search-wrapper {
+  width: 68%;
 }
-  
-form .search-input {
-    padding: 1rem;
-    background: #2bb7da;
-    color: white;
-    border: 2px solid white;
-    border-left: none;
-    border-radius: 5px;
-    margin-left: -7px;
+.search-button {
+  width: 30%;
 }
+.footer-form a {
+  display: inline-block;
+  text-decoration: none;
+  background-color: white;
+  color: black;
+  border: 2px solid white;
+  border-radius: 5px;
+  padding: 1rem 1.2rem 0.5rem 1.2rem;
+  margin-left: 0.3rem;
+  /* width: 60%; */
+  text-align: center;
+}
+.footer-form a:hover {
+  color: #31d35c;
+}
+.footer-form .search-input {
+  padding: 1rem;
+  background: black;
+  color: white;
+  border: 2px solid white;
+  border-radius: 5px;
+  width: 100%;
+}
+
 ::placeholder {
-    color: white;
+  color: white;
+  font-size: 1rem;
 } /* Firefox */
-  form .search-input:focus {
-    outline: none;
+form .search-input:focus {
+  outline: none;
 }
-  :-ms-input-placeholder {
-    color: white;
+:-ms-input-placeholder {
+  color: white;
 } /* IE 10-11 */
-  
+
 .footer-middle-section {
-    margin-top: 2rem;
-    display: flex;
-    justify-content: space-between;
-    font-size: 1.2rem;
+  margin-top: 2rem;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.2rem;
 }
 .footer-section {
-    width: 20%;
-    display: flex;
-    flex-direction: column;
+  width: 20%;
+  display: flex;
+  flex-direction: column;
 }
-.footer-section:first-child {
-    margin-left: 1.8rem;
-}
-.footer-section:last-child {
-    margin-right: 1.8rem;
-}
+
 .footer-section a {
-    text-decoration: none;
-    color: white;
-    margin-bottom: 0.2rem;
+  text-decoration: none;
+  color: white;
+  margin-bottom: 0.2rem;
 }
-/* .footer-subscribe-btn-container {
-    width: 20%;
-} */
-.footer-section .subscribe-btn {
-    display: inline-block;
-    text-decoration: none;
-    color: white;
-    border: 2px solid white;
-    font-weight: 600;
-    padding: 0.6rem 2.5rem;
-    border-radius: 5px;
-    margin-top: 0.6rem;
+.footer-section a:hover {
+  color: #31d35c;
 }
-  
+.footer-subscribe-btn {
+  border: 2px solid white;
+  color: white;
+  text-align: center;
+  background-color: black;
+  width: 100%;
+  padding: 0.8rem 0;
+  font-size: 1.1rem;
+  border-radius: 5px;
+  margin-top: 0.3rem;
+}
+.footer-subscribe-btn:hover {
+  color: black;
+  background-color: white;
+  border: 2px solid black;
+}
 footer hr {
-    margin: 1rem 0;
+  margin: 1rem 0;
+  height: 1.2px;
+  background-color: white;
+  border: none;
 }
 .footer-bottom-section {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin: 1.5rem 0 1.5rem 1.5rem;
+}
+.footer-bottom-link {
+  flex-wrap: nowrap;
+  width: 40%;
 }
 .footer-bottom-link a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
+}
+.footer-bottom-link a:hover {
+  color: #31d35c;
 }
 .footer-bottom-link a:not(:last-child) {
-    margin-right: 1.5rem;
+  margin-right: 1.5rem;
 }
 .footer-bottom-section p {
-    color: white;
-    margin-left: 1.8rem;
+  color: white;
+  margin-left: 1.8rem;
 }
 .footer-social-links {
-    margin-right: 2rem;
-    display: flex;
-    align-items: center;
+  width: 30%;
+  margin-right: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-right: 2rem;
 }
 .footer-social-links a {
-    text-decoration: none;
+  text-decoration: none;
+}
+.footer-social-links a:hover {
+  transform: scale(1.1);
+}
+.footer-social-links svg:hover {
+  fill: #31d35c;
 }
 .footer-social-links p {
-    margin-right: 0.5rem;
+  margin-right: 0.5rem;
 }
 .footer-social-links a:not(:last-child) {
-    margin-right: 0.9rem;
+  margin-right: 0.5rem;
 }
 .footer-social-links svg {
-    fill: white;
+  fill: white;
 }
-.mentor-name, .copyright {
-    text-align: center;
-    color: white;
-    margin-top: 1rem;
-    padding-bottom: 1rem;
-    text-transform: uppercase;
-    font-weight: 600;
+.footer-copyright {
+  width: 90%;
+  margin: 1rem auto 1rem auto;
 }
+.mentor-name,
+.copyright {
+  text-align: center;
+  color: white;
+  padding-bottom: 1rem;
+  text-transform: uppercase;
+  font-weight: 600;
+}
+/* //RESPONSIVE DESIGN// */
 @media (max-width: 750px) {
-    header {
-      position: relative;
-    }
-    .nav-toggle {
-      display: block;
-      position: absolute;
-      cursor: pointer;
-      margin-top: 0.4rem;
-      margin-right: 1rem;
-      right: 0;
-    }
-    nav svg {
-      width: 1.3rem;
-      fill: white;
-    }
-    .close,
-    .nav-checkbox {
-      display: none;
-    }
-  
-    .nav-menu {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-      align-items: center;
-      margin: 0.1rem 0;
-    }
-    .nav-links {
-      position: absolute;
-      margin-top: 3.3rem;
-      /* left: 50%; */
-      top: 20px;
-      width: 100%;
-    }
-  
-    li {
-      display: none;
-      padding: 0.2rem 1rem 0.2rem;
-      font-size: 1.2rem;
-    }
-    .nav-checkbox:checked ~ .nav-links .nav-menu li {
-      display: block;
-    }
-    .nav-checkbox:checked ~ label.nav-toggle .close {
-      display: block;
-    }
-    .nav-checkbox:checked ~ label.nav-toggle .menu {
-      display: none;
-    }
-    .nav-checkbox:checked ~ .nav-links .nav-menu {
-      background-color: black;
-      opacity: 0.9;
-      height: 94vh;
-      padding-top: 2rem;
-      border-radius: 3px;
-    }
-    .nav-call-to-action {
-      display: none;
-    }
-    footer {
-      font-size: 1rem;
-    }
-    .footer-call-to-action a {
-      padding: 0.6rem 0.5rem 0.2rem 0.5rem;
-    }
-    form .search-input {
-      padding: 0.8rem;
-    }
-    .footer-top {
-      flex-direction: column;
-    }
-    .footer-middle-section {
-      flex-wrap: wrap;
-      font-size: 1rem;
-    }
-    .footer-section {
-      margin-left: 1rem;
-      width: 32%;
-    }
-    .footer-section:nth-child(3) {
-      margin-top: 0.5rem;
-    }
-    .footer-section:first-child {
-      margin-left: 1rem;
-    }
-    .footer-section:nth-child(2) {
-      margin-right: 1rem;
-    }
-    .footer-section:last-child {
-      margin-top: 0.5rem;
-      margin-right: 1rem;
-      margin-left: 2rem;
-    }
-    .footer-section .subscribe-btn {
-      padding: 0.4rem 3rem 0.4rem 3rem;
-    }
-    .footer-bottom-section {
-      flex-direction: column;
-      text-align: center;
-    }
-    .footer-bottom-section p {
-      margin-left: 0;
-    }
-    .footer-bottom-section p,
-    .footer-bottom-link {
-      width: 90%;
-    }
-    .mentor-name {
-      text-align: center;
-    }
+  header {
+    position: relative;
+  }
+  .header-logo {
+    margin-left: -1.5rem;
+  }
+  .nav-toggle {
+    display: block;
+    position: absolute;
+    cursor: pointer;
+    margin-top: 0.4rem;
+    margin-right: 1rem;
+    right: 0;
+  }
+  nav svg {
+    width: 1.3rem;
+    fill: white;
+  }
+  .close,
+  .nav-checkbox {
+    display: none;
+  }
+
+  .nav-menu {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    margin: 0.1rem 0;
+  }
+  .nav-links {
+    position: absolute;
+    margin-top: 2.76rem;
+    top: 20px;
+    width: 100%;
+    z-index: 100;
+  }
+
+  li {
+    display: none;
+    padding: 0.2rem 1rem 0.2rem;
+    font-size: 1.2rem;
+  }
+  .nav-checkbox:checked ~ .nav-links .nav-menu li {
+    display: block;
+  }
+  .nav-checkbox:checked ~ label.nav-toggle .close {
+    display: block;
+  }
+  .nav-checkbox:checked ~ label.nav-toggle .menu {
+    display: none;
+  }
+  .nav-checkbox:checked ~ .nav-links .nav-menu {
+    background-color: black;
+    opacity: 0.9;
+    height: 87vh;
+    padding-top: 2rem;
+    border-radius: 3px;
+  }
+  .nav-call-to-action {
+    display: none;
+  }
+  footer {
+    font-size: 1rem;
+  }
+  .footer-form {
+    margin-top: 0.5rem;
+  }
+  .footer-form a {
+    margin-left: 0.3rem;
+    padding: 0.8rem 0.95rem 0.8rem 0.95rem;
+  }
+  .form-search-wrapper {
+    width: 80%;
+  }
+  .search-button {
+    width: 18%;
+  }
+  .foter-form .search-input {
+    padding: 0.8rem;
+  }
+  .footer-top {
+    flex-direction: column;
+  }
+
+  .footer-middle-section {
+    flex-wrap: wrap;
+    font-size: 1rem;
+  }
+  .footer-section {
+    margin-left: 1rem;
+    width: 32%;
+  }
+  .footer-section:nth-child(3) {
+    margin-top: 0.8rem;
+  }
+
+  .footer-section:last-child {
+    margin-top: 0.8rem;
+  }
+  .footer-section .subscribe-btn {
+    display: inline-block;
+    padding: 0.4rem 2rem 0.4rem 2rem;
+  }
+  .footer-bottom-section {
+    text-align: center;
+  }
+  .footer-bottom-section p {
+    margin-left: 0;
+  }
+  .footer-bottom-section {
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .footer-bottom-link {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 1.5rem;
+  }
+  .footer-social-links {
+    width: 55%;
+    margin: 0 auto;
+  }
+  .social-link {
+    display: flex;
+    justify-content: center;
+  }
+  .mentor-name {
+    text-align: center;
+  }
+  .mentor-name,
+  .copyright {
+    font-weight: 700;
+    line-height: 1.4;
+    font-size: 0.8rem;
+  }
+}
+@media (max-width: 350px) {
+  /*For very small devices*/
+  .footer-middle-section {
+    justify-content: center;
+  }
+  .footer-section {
+    width: 90%;
+    margin: 0 auto;
+  }
+  .footer-bottom-section {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .footer-bottom-link {
+    flex-direction: row;
+    width: 70%;
+  }
+  .footer-social-links {
+    width: 90%;
+    margin-top: 1rem;
+  }
 }
