--- a/css/header.css
+++ b/css/header.css
@@ -1,9 +1,22 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Public+Sans:wght@300;400&display=swap");
+
+*{
+  margin-right: 6px;
+  margin-left: 3px;
+    box-sizing: border-box;
+    font-family: "Poppins", sans-serif;
+}
 body {
   font-family: "Poppins", sans-serif;
 }
 header {
   background: #2bb7da;
+    margin-top: 45px;
+    height: 50px;
+    text-align: center;
+    justify-content: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 nav {
   display: flex;
