--- a/css/tidelabNews.css
+++ b/css/tidelabNews.css
@@ -1,13 +1,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Fugaz+One&family=Monoton&display=swap');
 *{
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+    padding: 0;
 }
+
 /* //HEADER SECTION// */
 header {
     background: #2bb7da;
+    margin-top: 45px;
+    height: 60px;
+    text-align: center;
+    justify-content: center;
+    /* padding-top: 0.1px;
+    padding-bottom: 0.1px; */
 }
 nav {
     display: flex;
@@ -54,29 +60,135 @@ nav {
 }
 
 /* //MAIN SECTION// */
+
+.section-heading-separator {
+  display:flex;
+  justify-content:center;
+  position:relative;
+  margin-bottom: 0.2em;
+}
+
+.section-heading-separator .sub-title{
+  font-size:2.2em;
+  font-family:'Times New Roman', Times, serif;
+  line-height: 1.2;
+  color: black;
+  background-color: white;
+  position: relative;
+  z-index: 1;
+ }
+
+.section-heading-separator fieldset {
+  width:100%;
+  text-align: center;
+  border-left: none;
+  border-right: none;
+  border-bottom: none;
+  margin-top: 3%;
+  letter-spacing: 5px;
+  color: red;
+}
+
+main{
+  display: flex;
+  justify-content: space-between;
+  margin-top: 5px;
+}
 .sub-title{
     margin: 20px 20px;
     text-align: center;
     font-size: bold;
 }
-.container{
-    margin: 20px 20px 20px 20px;
+
+ .whole-container-wrapper {
+   width: 80%;
+  /* align-items: center; */
+  margin-top: 5px;
 }
 
-.container img{
-    height: 250px;
-    width: 350px;
-
+.advertisment{
+  width: 20%;
 }
 
+/* /* .ad{
+  width: 100%;
+  height: 550px;
+  margin-bottom: 80px;
+} */
+
+.adname{
+ font-size: 10px;
+ text-align: center;
+} */
+
+.left-section{
+  width: 30%;
+}
+
+.first{
+  border-bottom: 2px solid rgb(226, 217, 217);
+}
+
+  .left img{
+    width: 100%;
+    height: 180px;
+}
+
+.middle-section{
+  width: 52%;
+  border-left: 1px solid rgb(226, 217, 217);
+  border-right: 1px solid rgb(226, 217, 217);
+  margin-top: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.middle img{
+  width: max-content;
+  height: 250px;
+  /* align-items: stretch; */
+}
+
+.middle {
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-top: 25px;
+}
+
+.middle a{
+  text-decoration: none;
+  color: #000;
+}
+
+.middle-title{
+  font-size: 24px;
+  text-align: center;
+}
+
+.right-section{
+  width: 30%;
+}
+
+.right img{
+  width: 100%;
+  height: 180px;
+}
+
+.news-headlines{
+  display: flex;
+  justify-content: space-around;
+  gap: 10px;
+  border-bottom: 1px solid rgb(226, 217, 217);
+}
 .container-wrapper{
     display: flex;
     justify-content: center;
-    align-items: center;
-    gap: 100px;
+    /* align-items: center; */
+    gap: 20px;
     margin-top: 2rem;
 
 }
+
 
 /* .news-clip{
     padding: 10px;
@@ -85,19 +197,33 @@ nav {
     border-radius: 5px; 
 }*/
 
-.section{
-    padding: 40px;
-}
-.section h2{
+ a {
+   text-decoration: none;
+   color: black;
+ }
+
+
+.section-heading-separator fieldset h2{
     font-size: 30px;
     font-weight: bold;
-    color:red;
-    margin-bottom: 10px 0px;
+    margin-bottom: 10px;
     text-transform: uppercase;
     text-align: center;
+    
+}
+.div-wrapper{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+   gap: 20px;
+  margin-top: 20px;
 }
 
+.div-wrapper img {
+  width: 235px;
+    height: 180px;
 
+}
 
 /* //FOOTER SECTION// */
 footer {
