--- a/css/sports.css
+++ b/css/sports.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+}
 a{
     text-decoration: none;
 }
@@ -32,8 +33,8 @@ nav {
 .header-logo h3,
 .footer-logo h3 {
   color: white;
-/*   font-size: 1.3rem; */
-    font-size: 35px;
+  font-size: 1.3rem; 
+   
 }
 .header-logo h3 {
   margin-left: 1rem;
@@ -102,16 +103,16 @@ nav {
 }
 
 /* //MAIN SECTION// */
-/* .section-heading-separator {
+ .section-heading-separator {
 
   display: flex;
   justify-content: center;
   position: relative;
   margin-bottom: 1em;
-} */
+} 
 
 .section-heading-separator .heading-title {
-/*   font-size: 1.2em; */
+  /* font-size: 1.2em;  */
   font-size: 2em;
   font-family: "Times New Roman", Times, serif;
   line-height: 1.2;
@@ -120,11 +121,7 @@ nav {
   position: relative;
   z-index: 1;
   padding: 0.25em 1em;
-
-   display:flex;
-   justify-content:center;
-   position:relative;
-   margin-bottom: 1em;
+  margin-bottom: 1em;
 }
 
 .heading-title a {
@@ -132,29 +129,31 @@ nav {
   color: black;
 }
 .section-heading-separator fieldset {
-
   width: 100%;
   text-align: center;
   border-left: none;
   border-right: none;
   border-bottom: none;
-  margin-top: 2%;
+  margin-top: 5%;
 }
 main {
   display: flex;
   justify-content: space-between;
-  margin: 10px 20px 10px 20px;
-/*   margin-top: 20px; */
-    width:100%;
-    text-align: center;
-    border-left: none;
-    border-right: none;
-    border-bottom: none;
-    margin-top: 6%;
+  /* margin-left: 0.5em; */
+  width:100%;
+  text-align: center;
+  /* border-left: none;
+  border-right: none;
+  border-bottom: none; */
+  border: none;
+
 }
 
 .sports-wrapper {
   width: 80%;
+}
+.adnammy{
+  padding-left: 50px;
 }
 .ad {
   width: 100%;
@@ -165,6 +164,7 @@ main {
 .adname {
   font-size: 10px;
   text-align: center;
+}
 .advertisment{
     width: 20%;
 }
@@ -176,12 +176,12 @@ main {
 .main-news{
     display: flex;
     justify-content: space-around;
-/*     gap: 30px; */
     gap: 10px;
     border-bottom: 1px solid rgb(226, 217, 217);
 }
 .left-section {
   width: 30%;
+  padding-left: 10px;
 }
 .first {
   border-bottom: 2px solid rgb(226, 217, 217);
@@ -223,19 +223,22 @@ main {
 .middle-card-image{
     border-radius: 5px;
     width: 100%;
-    height: 430px;
-  /*   height: 250px; */
+     height: 400px; 
+     /* height: 250px;  */
     box-shadow: 0 4px 8px 0 rgba(27, 27, 27, 0.9);
     transition: 2s;
     scale: 1.5;
 }
 .right-section {
   width: 30%;
+  padding-left: 10px;
+  padding-right: 10px;
 }
 .news-title a {
   font-weight: 700;
   text-decoration: none;
   color: #000;
+  text-align: justify;
 }
 .new-news-content {
   display: flex;
@@ -244,7 +247,7 @@ main {
 }
 .news-author h5,
 .news-time h5 {
-  margin-top: -20px;
+  /* margin-top: -20px; */
   font-weight: 200;
   font-size: 15px
 }
@@ -281,7 +284,7 @@ background: whitesmoke;
   color: #000;
   font-weight: normal;
   font-size: 15px;
-
+}
 .minor-news-wrapper{
     display: flex;
     gap: 40px;
@@ -332,10 +335,11 @@ background: whitesmoke;
   display: flex;
   margin-top: 30px;
   gap: 20px;
+}
 .section-news-content-container, .news-content-container{
  display: flex;
  gap: 40px;
- margin-top: 50px;
+ margin-top: 20px;
  padding: 10px;
 }
 .second-news-container {
@@ -362,6 +366,7 @@ background: whitesmoke;
     display: flex;
     gap: 40px;
     margin-top: 50px;
+    padding-left: 10px;
 }
 
 /* page number */
@@ -851,9 +856,9 @@ align-items: center;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center; */
+    align-items: center; 
   }
-/*   .right-section,
+  .right-section,
   .left-section,
   .middle-section {
     width: 100%;
@@ -929,23 +934,37 @@ align-items: center;
         align-items: center;
         margin-top: 20px;
     }
-    .sports-wrapper{
-        width: 100%;
+    .sports-wrapper {
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
     }
+    
     .main-news{
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        /* gap: 10px; */
-        /* border-bottom: 1px solid rgb(226, 217, 217); */
     }
     .right-section, .left-section, .middle-section{
         width: 100%;
+        text-align: center;
+    }
+    .left-section{
+      padding-left: 10px;
+      padding-right: 10px;
     }
     .middle-section{
         border: none;
+        padding-left: 10px;
     }
+    .middle-card-image{
+      width: 100%;
+      height: 300px;
+    
+  }
     .middle-title {
         font-size: 16px;
         text-align: center;
@@ -1012,12 +1031,32 @@ align-items: center;
         align-items: center;
         width: 100%;
     }
+    .modified-img {
+      width: 220px;
+      height: 170px;
+    }
+    .horizontal{
+      display: none;
+    }
     .advert-inside{
         width: 300px;
         margin-left: 0;
         
     }
-    .advert{
+    .advertisment{
         display: none;
     }
+    .body-advert{
+      visibility: visible;
+    }
+    .body-advert{
+      display: contents;
+    }
+    .body-advert-image{
+      width: 220px;
+      height: 50px;
+    }
+    .adnammy {
+      padding-left: 0px;
+  }
 }
